[workspace]
members = [
    "examples/account-management",
    "examples/token-management",
    "sealevel-tools"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/rtrombone/safer-solana"
rust-version = "1.75.0"
version = "0.3.0"

[workspace.dependencies]
bincode = "1.3.3"
borsh = { version = "1.5.1", default-features = false }
const-crypto = "0.3"
sealevel-tools = { path = "sealevel-tools" }
solana-banks-interface = "^1.18"
solana-nostd-entrypoint = "0.5.1"
solana-program = "^1.18"
solana-program-test = "^1.18"
solana-sdk = "^1.18"
spl-discriminator = "0.3"
spl-token = { version = "^4.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "^3.0", features = ["no-entrypoint"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
