[workspace]
members = [
    "examples/account-management",
    "examples/common",
    "examples/token-management",
    "sealevel-tools"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rtrombone/safer-solana"
rust-version = "1.75.0"
version = "0.5.1-beta.1"

[workspace.dependencies]
bs58 = { version = "0.5.1", default-features = false, features = ["alloc"] }
bincode = "1.3.3"
borsh = { version = "1.5.1", default-features = false }
const-crypto = "0.3"
sealevel-nostd-entrypoint = "0.1.0"
sealevel-tools = { path = "sealevel-tools" }
solana-banks-interface = "2"
solana-program = "2"
solana-program-test = "2"
solana-sdk = "2"
spl-discriminator = "0.3"
spl-token = { version = "5.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "5.0", features = ["no-entrypoint"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
