[workspace]
members = [
    "examples/account-management",
    "examples/common",
    "examples/token-management",
    "sealevel-tools"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rtrombone/safer-solana"
rust-version = "1.79"
version = "0.7.0"

[workspace.dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
bincode = "1.3"
borsh = { version = "1.5", default-features = false }
const-crypto = "0.3"
sealevel-nostd-entrypoint = "0.1"
sealevel-tools = { path = "sealevel-tools" }
solana-banks-interface = "2.1.4"
solana-clock = "2.1.4"
solana-cpi = "2.1.4"
solana-define-syscall = "2.1.4"
solana-instruction = "2.1.4"
solana-msg = "2.1.4"
solana-program-error = "2.1.4"
solana-program-pack = "2.1.4"
solana-program-test = "2.1.4"
solana-pubkey = "2.1.4"
solana-rent = "2.1.4"
solana-sdk = "2.1.4"
spl-discriminator = "0.4"
spl-token-2022 = { version = "6", features = ["no-entrypoint"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
