[package]
name = "sealevel-tools"
categories = [
    "cryptography::cryptocurrencies",
    "no-std",
    "no-std::no-alloc"
]
description = "Tools for safe, CU-optimized Solana program development"
keywords = [
    "solana",
    "solana-program",
    "spl",
    "spl-token-2022"
]
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
alloc = ["dep:bs58"]
borsh = ["dep:borsh"]
default = [
    "alloc",
    "borsh",
    "token"
]
noalloc-default = [
    "borsh",
    "token"
]
token = ["dep:spl-token-2022"]

[dependencies]
bs58 = { optional = true, workspace = true }
borsh = { optional = true, workspace = true }
const-crypto.workspace = true
sealevel-nostd-entrypoint.workspace = true
solana-program.workspace = true
spl-token-2022 = { optional = true, workspace = true }

[dev-dependencies]
bincode.workspace = true
spl-discriminator.workspace = true