[package]
name = "create-pda-using-anchor"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "create_pda_using_anchor"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang.workspace = true

[dev-dependencies]
create-pda-common = { path = "../common" }
solana-program-test.workspace = true
